bk_ida/gobmkida/c1/jump_out_far_helper
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/jump_out_far_helper/src/patterns/helpers.c:590:27: error: unknown type name 'pattern_0'
int  jump_out_far_helper( pattern_0 *pattern, int trans, int move, int color) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/jump_out_far_helper/src/patterns/helpers.c:604:38: error: expected expression
return jump_out_helper( ( pattern_0 *)v7, move, move, color); 
                                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/jump_out_far_helper/src/patterns/helpers.c:604:27: error: use of undeclared identifier 'pattern_0'
return jump_out_helper( ( pattern_0 *)v7, move, move, color); 
                          ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/jump_out_far_helper/src/obj/3/helpers.o] Error 1
